--- a/application-dev.yml
+++ b/application-dev.yml
@@ -29,8 +29,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: guest
-    password: guest
+    username: rabbitUser
+    password: rabbitUser
   http:
     multipart:
       max-file-size: 1000MB
