--- a/application-dev.yml
+++ b/application-dev.yml
@@ -29,7 +29,7 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: rabbitUser
+    username: admin
     password: 123456
   http:
     multipart:
